# tesswcs

./: .flake8  .gitignore  404.html  LICENSE  Makefile  index.html  mkdocs.yml  pyproject.toml  tutorial.ipynb
.github/workflows/: black.yml  flake8.yml  publish.yml  tests.yml  update.yaml
about/: index.html
docs/: README.md  about.md  tutorial.ipynb  tutorial.md  tutorial2.ipynb  tutorial2.md  tutorial3.ipynb  tutorial3.md
search/: search_index.json
src/tesswcs/: TESS_wcs_sip.json.bz2  TESS_wcs_xcent.json.bz2  TESS_wcs_xs.json.bz2  TESS_wcs_ycent.json.bz2  TESS_wcs_ys.json.bz2  __init__.py  database.py  locate.py  tesswcs.py  utils.py
src/tesswcs/data/: TESS_wcs_M.json.bz2  TESS_wcs_Ms.json.bz2  TESS_wcs_data.json.bz2  TESS_wcs_offset_weights.json.bz2  TESS_wcs_sip.json.bz2  TESS_wcs_xcent.json.bz2  TESS_wcs_xs.json.bz2  TESS_wcs_ycent.json.bz2  TESS_wcs_ys.json.bz2  draft_pointings.csv  pointings.csv
tests/: test_locate.py  test_tesswcs.py
tutorial/: index.html
tutorial2/: index.html
tutorial3/: index.html
