[tool.poetry]
name = "tesswcs"
version = "1.1.8"
description = ""
authors = ["Christina Hedges <christina.l.hedges@nasa.gov>"]
readme = "docs/README.md"
packages = [{include = "tesswcs", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
astropy = "^5.3.4"
rich = "^13.7.0"
tqdm = "^4.66.1"
matplotlib = "^3.8.2"
toml = "^0.10.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.3"
mkdocstrings = "^0.24.0"
mkdocs-material = "^9.4.10"
pytkdocs = {version = "^0.12.0", extras = ["numpy-style"]}
pytest = "^7.4.3"
black = "^24.0.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
jupyterlab = "^4.0.9"
line-profiler = "^4.1.2"
astroquery = "^0.4.6"
pandas = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
